update to java 8 compatible code